remove-item-interested-room
